{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 38,
  "lineage": "0ef604e4-6f3a-6e0f-1c80-e842cbb5f648",
  "resources": [
    {
      "mode": "data",
      "type": "google_compute_network",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "description": "Default network for the project",
            "id": "projects/akiva-sandbox/global/networks/default",
            "name": "default",
            "project": "akiva-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/networks/default",
            "subnetworks_self_links": [
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/africa-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/northamerica-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/australia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/northamerica-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-west8/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/southamerica-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-east7/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-west3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/me-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-south2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-west2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-southeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-east4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-southeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west6/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-northeast1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west12/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/southamerica-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-north1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west10/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-west9/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-east2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/me-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-east1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-east5/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-southwest1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/me-west1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-south1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-northeast2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-central1/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/europe-central2/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/asia-northeast3/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/us-west4/subnetworks/default",
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/regions/australia-southeast1/subnetworks/default"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "app_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/zones/us-central1-a/instanceGroups/app-instance-group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-12-12T03:59:41.468-08:00",
            "enable_cdn": false,
            "fingerprint": "bjG2saVq1no=",
            "generated_id": 8887038038729160130,
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/healthChecks/app-health-check"
            ],
            "id": "projects/akiva-sandbox/global/backendServices/app-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-backend-service",
            "port_name": "http",
            "project": "akiva-sandbox",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/backendServices/app-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 30
          },
          "dependencies": [
            "google_compute_health_check.app_health_check",
            "google_compute_instance_group_manager.app_instance_group_manager",
            "google_compute_instance_template.app_instance_template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-12-06T12:05:10.854-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/akiva-sandbox/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/networks/default",
            "priority": 1000,
            "project": "akiva-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "app_global_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.160.234.209",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-12-06T12:05:10.790-08:00",
            "id": "projects/akiva-sandbox/global/addresses/app-global-ip",
            "name": "app-global-ip",
            "prefix_length": 0,
            "project": "akiva-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/addresses/app-global-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "private_ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.14.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2023-12-06T12:05:10.908-08:00",
            "id": "projects/akiva-sandbox/global/addresses/private-ip-address",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "private-ip-address",
            "network": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/networks/default",
            "prefix_length": 16,
            "project": "akiva-sandbox",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/addresses/private-ip-address"
          },
          "dependencies": [
            "data.google_compute_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "app_global_forwarding_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/akiva-sandbox/global/forwardingRules/app-global-forwarding-rule",
            "ip_address": "34.160.234.209",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "app-global-forwarding-rule",
            "port_range": "80-80",
            "project": "akiva-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/forwardingRules/app-global-forwarding-rule",
            "target": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/targetHttpProxies/app-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.app_backend_service",
            "google_compute_global_address.app_global_ip",
            "google_compute_health_check.app_health_check",
            "google_compute_instance_group_manager.app_instance_group_manager",
            "google_compute_instance_template.app_instance_template",
            "google_compute_target_http_proxy.app_target_http_proxy",
            "google_compute_url_map.app_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "app_target_http_proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-12T04:00:15.872-08:00",
            "http_keep_alive_timeout_sec": 0,
            "id": "projects/akiva-sandbox/global/targetHttpProxies/app-target-http-proxy",
            "name": "app-target-http-proxy",
            "project": "akiva-sandbox",
            "proxy_bind": false,
            "proxy_id": 8647085354137286048,
            "self_link": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/targetHttpProxies/app-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/urlMaps/app-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.app_backend_service",
            "google_compute_health_check.app_health_check",
            "google_compute_instance_group_manager.app_instance_group_manager",
            "google_compute_instance_template.app_instance_template",
            "google_compute_url_map.app_url_map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "app_url_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-12-12T04:00:03.780-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/backendServices/app-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "O7twVJA5dZM=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/akiva-sandbox/global/urlMaps/app-url-map",
            "map_id": 5446307495584069036,
            "name": "app-url-map",
            "path_matcher": [],
            "project": "akiva-sandbox",
            "self_link": "https://www.googleapis.com/compute/v1/projects/akiva-sandbox/global/urlMaps/app-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.app_backend_service",
            "google_compute_health_check.app_health_check",
            "google_compute_instance_group_manager.app_instance_group_manager",
            "google_compute_instance_template.app_instance_template"
          ]
        }
      ]
    }
  ]
}